--- a/views/dashboard.pug
+++ b/views/dashboard.pug
@@ -2,7 +2,7 @@ doctype html
 html
   head
     title Dashboard
-    link(rel="stylesheet", href="/dashboard.css") // Archivo de estilos opcional
+    link(rel="stylesheet", href="/dashboard.css")
   body
     h1 Dashboard
     h2 Últimos 20 datos crudos
