Fixed variable name

--- a/views/dashboard.pug
+++ b/views/dashboard.pug
@@ -13,7 +13,7 @@ html
           th Device ID
           th Fecha de Creación
       tbody
-        each consumo in consumos
+        each usage in usages
           tr
             td= consumo.value
             td= consumo.deviceId
