--- a/views/dashboard.pug
+++ b/views/dashboard.pug
@@ -17,4 +17,4 @@ html
           tr
             td= usage.value
             td= usage.deviceId
-            td= usage.createdAt.toISOString().substring(0, 10) + ' ' + usage.createdAt.toISOString().substring(11, 19)
+            td= usage.createdAt
