--- a/public/dashboard.css
+++ b/public/dashboard.css
@@ -7,6 +7,18 @@ h1, h2 {
   color: #333;
 }
 
+.container {
+  display: flex;
+}
+
+.left {
+  flex: 1;
+}
+
+.right {
+  flex: 1;
+}
+
 table {
   width: 100%;
   border-collapse: collapse;
