--- a/views/dashboard.pug
+++ b/views/dashboard.pug
@@ -2,7 +2,7 @@ doctype html
 html
   head
     title Dashboard
-    link(rel="stylesheet", href="/styles.css")
+    link(rel="stylesheet", href="/dashboard.css")
     script(src="https://cdn.jsdelivr.net/npm/chart.js")
   body
     h1 Dashboard
