--- a/public/dashboard.css
+++ b/public/dashboard.css
@@ -17,6 +17,8 @@ h1, h2 {
 
 .right {
   flex: 1;
+  display: flex;
+  flex-direction: column;
 }
 
 table {
@@ -32,4 +34,8 @@ th, td {
 
 th {
   background-color: #f4f4f4;
+}
+
+canvas {
+  margin-top: 20px;
 }
