--- a/views/dashboard.pug
+++ b/views/dashboard.pug
@@ -20,9 +20,10 @@ html
               tr
                 td= usage.value
                 td= usage.deviceId
-                td= usage.createdAt
+                td= usage.createdAt.toISOString().substring(0, 10) + ' ' + consumo.createdAt.toISOString().substring(11, 19)
       .right
         canvas#trendChart(width="400" height="400")
+        canvas#hourlyChart(width="400" height="400")
     script.
       const ctx = document.getElementById('trendChart').getContext('2d');
       const trendChart = new Chart(ctx, {
@@ -34,6 +35,28 @@ html
             data: !{JSON.stringify(dailyConsumption)},
             backgroundColor: 'rgba(75, 192, 192, 0.2)',
             borderColor: 'rgba(75, 192, 192, 1)',
+            borderWidth: 1
+          }]
+        },
+        options: {
+          scales: {
+            y: {
+              beginAtZero: true
+            }
+          }
+        }
+      });
+
+      const ctxHourly = document.getElementById('hourlyChart').getContext('2d');
+      const hourlyChart = new Chart(ctxHourly, {
+        type: 'bar',
+        data: {
+          labels: Array.from({ length: 24 }, (_, i) => `${i}:00`),
+          datasets: [{
+            label: 'Consumo Promedio por Hora (L/min)',
+            data: !{JSON.stringify(hourlyConsumption)},
+            backgroundColor: 'rgba(153, 102, 255, 0.2)',
+            borderColor: 'rgba(153, 102, 255, 1)',
             borderWidth: 1
           }]
         },
