--- a/public/dashboard.css
+++ b/public/dashboard.css
@@ -5,24 +5,23 @@ body {
 
 h1, h2 {
   color: #333;
+  text-align: center;
 }
 
-.container {
+.charts-container {
   display: flex;
+  justify-content: space-around;
+  align-items: center;
+  margin-bottom: 20px;
 }
 
-.left {
-  flex: 1;
-}
-
-.right {
-  flex: 1;
+.table-container {
   display: flex;
-  flex-direction: column;
+  justify-content: center;
 }
 
 table {
-  width: 100%;
+  width: 80%;
   border-collapse: collapse;
 }
 
@@ -37,5 +36,6 @@ th {
 }
 
 canvas {
-  margin-top: 20px;
+  width: 30%;
+  height: auto;
 }
