--- a/views/dashboard.pug
+++ b/views/dashboard.pug
@@ -7,29 +7,27 @@ html
     script(src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js")
   body
     h1 Dashboard
+    .charts-container
+      canvas#trendChart
+      canvas#hourlyChart
+      canvas#lineTrendChart
     h2 Últimos 20 datos crudos
-    .container
-      .left
-        table
-          thead
+    .table-container
+      table
+        thead
+          tr
+            th Consumo (L/min)
+            th Device ID
+            th Fecha de Creación
+        tbody
+          each usage in usages
             tr
-              th Consumo (L/min)
-              th Device ID
-              th Fecha de Creación
-          tbody
-            each usage in usages
-              tr
-                td= usage.value
-                td= usage.deviceId
-                td= usage.createdAt.toISOString().substring(0, 10) + ' ' + usage.createdAt.toISOString().substring(11, 19)
-      .right
-        canvas#trendChart(width="400" height="400")
-        canvas#hourlyChart(width="400" height="400")
-    h2 Línea de tendencia de los últimos 50 datos de flujo
-    canvas#lineTrendChart(width="400" height="200")
+              td= usage.value
+              td= usage.deviceId
+              td= usage.createdAt.toISOString().substring(0, 10) + ' ' + usage.createdAt.toISOString().substring(11, 19)
     script.
-      const ctx = document.getElementById('trendChart').getContext('2d');
-      const trendChart = new Chart(ctx, {
+      const ctxTrend = document.getElementById('trendChart').getContext('2d');
+      const trendChart = new Chart(ctxTrend, {
         type: 'line',
         data: {
           labels: !{JSON.stringify(dates)},
