--- a/views/dashboard.pug
+++ b/views/dashboard.pug
@@ -8,12 +8,9 @@ html
   body
     h1 Dashboard
     .charts-container
-      .chart-wrapper
-        canvas#trendChart
-      .chart-wrapper
-        canvas#hourlyChart
-      .chart-wrapper
-        canvas#lineTrendChart
+      canvas#trendChart
+      canvas#hourlyChart
+      canvas#lineTrendChart
     h2 Últimos 20 datos crudos
     .table-container
       table
@@ -25,9 +22,9 @@ html
         tbody
           each usage in usages
             tr
-              td= usages.value
-              td= usages.deviceId
-              td= usages.createdAt.toISOString().substring(0, 10) + ' ' + usages.createdAt.toISOString().substring(11, 19)
+              td= usage.value
+              td= usage.deviceId
+              td= usage.createdAt.toISOString().substring(0, 10) + ' ' + usage.createdAt.toISOString().substring(11, 19)
     script.
       const ctxTrend = document.getElementById('trendChart').getContext('2d');
       const trendChart = new Chart(ctxTrend, {
