--- a/public/dashboard.css
+++ b/public/dashboard.css
@@ -16,12 +16,12 @@ h1, h2 {
 }
 
 .chart-wrapper {
-  width: 100%;
-  max-width: 1000px;
+  width: 80%;
+  height: 200px;
   position: relative;
-  height: 400px;
   margin-bottom: 20px;
 }
+
 
 .table-container {
   display: flex;
@@ -45,5 +45,5 @@ th {
 
 canvas {
   width: 100%;
-  height: 200px;
+  height: 100%;
 }
