--- a/views/dashboard.pug
+++ b/views/dashboard.pug
@@ -8,9 +8,12 @@ html
   body
     h1 Dashboard
     .charts-container
-      canvas#trendChart
-      canvas#hourlyChart
-      canvas#lineTrendChart
+      .chart-wrapper
+        canvas#trendChart
+      .chart-wrapper
+        canvas#hourlyChart
+      .chart-wrapper
+        canvas#lineTrendChart
     h2 Últimos 20 datos crudos
     .table-container
       table
